fixed spacing

--- a/client/src/scss/_core.scss
+++ b/client/src/scss/_core.scss
@@ -37,7 +37,7 @@ figure {
 
   margin: 0 auto;
 
-  padding: 0 1rem;
+  padding: 1rem;
 }
 
 .has-two-col {
