--- a/client/src/scss/pages/singleProjectPage.scss
+++ b/client/src/scss/pages/singleProjectPage.scss
@@ -1,5 +1,4 @@
 .project-single {
-    margin-top: 1rem;
     video {
         max-width: 100%;
         cursor: pointer;
